Database is creating with tables. Step 4.2. completed.

--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -9,17 +9,15 @@
         "skipLibCheck": true,
         "forceConsistentCasingInFileNames": true,
         "resolveJsonModule": true,
-        "typeRoots": [
-            "./node_modules/@types",
-            "./src/types"
-        ]
+        "moduleResolution": "node",
+        "sourceMap": true
     },
     "include": [
-        "server.ts",
-        "src/**/*.ts"
+        "**/*.ts"
     ],
     "exclude": [
         "node_modules",
+        "dist",
         "**/*.spec.ts"
     ]
 }
