--- a/api/package.json
+++ b/api/package.json
@@ -2,7 +2,7 @@
     "name": "progress-calendar-api",
     "version": "1.0.0",
     "description": "API for Progress Calendar",
-    "main": "server.ts",
+    "main": "dist/server.js",
     "scripts": {
         "start": "node dist/server.js",
         "build": "tsc",
@@ -12,11 +12,16 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "express": "^4.17.1"
+        "express": "^4.17.1",
+        "pg": "^8.7.1",
+        "dotenv": "^10.0.0"
     },
     "devDependencies": {
         "@types/express": "^4.17.13",
-        "@types/node": "^16.11.10",
+        "@types/node": "^16.11.7",
+        "@types/pg": "^8.6.1",
+        "nodemon": "^2.0.15",
+        "ts-node": "^10.4.0",
         "ts-node-dev": "^1.1.8",
         "typescript": "^4.5.2"
     }
