--- a/api/package.json
+++ b/api/package.json
@@ -12,9 +12,9 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "dotenv": "^10.0.0",
         "express": "^4.17.1",
-        "pg": "^8.7.1",
-        "dotenv": "^10.0.0"
+        "pg": "^8.16.0"
     },
     "devDependencies": {
         "@types/express": "^4.17.13",
