--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,26 @@ services:
       - ./api/.env
     # command: npm run dev # Or your actual start command
 
+  frontend:
+    build:
+      context: .
+      dockerfile: Dockerfile.frontend
+    ports:
+      - "5173:5173"
+    volumes:
+      - ./:/app
+      - frontend_node_modules:/app/node_modules
+    working_dir: /app
+    command: npm run dev -- --host
+    depends_on:
+      - api
+    environment:
+      - CHOKIDAR_USEPOLLING=true
+    # If your frontend .env file contains variables needed at build time or by compose itself
+    # you might need to uncomment and adjust the following:
+    # env_file:
+    #   - ./.env
+
   db:
     image: postgres:13
     ports:
@@ -30,4 +50,5 @@ services:
 
 volumes:
   pgdata:
-  api_node_modules: {} 
+  api_node_modules: {}
+  frontend_node_modules: {} 
