--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,4 @@ DB_INIT_NAME=progress_calendar_db
 # This defines which port on your host machine will connect to port 5432 inside the db container.
 # Make sure this port is free on your host.
 POSTGRES_PORT_ON_HOST=5433
+VITE_APP_PASSWORD=no-need-for-u-to-know
