--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.16",
     "dotenv": "^16.5.0",
     "framer-motion": "^11.0.8",
     "lucide-react": "^0.344.0",
@@ -17,6 +18,7 @@
     "react": "^18.3.1",
     "react-colorful": "^5.6.1",
     "react-dom": "^18.3.1",
+    "react-markdown": "^10.1.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
